fix: standardize spacing system (#6144)

--- a/src/screens/AdminPortal/MemberDetail/MemberDetail.module.css
+++ b/src/screens/AdminPortal/MemberDetail/MemberDetail.module.css
@@ -4,8 +4,8 @@
 }
 
 .profileImage {
-  width: 60px;
-  height: 60px;
+  width: var(--space-11);
+  height: var(--space-11);
   object-fit: cover;
 }
 
